+++ version 4.0-beta2
* gadu: #3072 fixed: always use encryption when available (Vogel)

+++ version 4.0-beta1
* chat: #3081 fixed: properly load conferences from configuration (Vogel)
* jabber: #3082 fixed: do not crash when accepting SSL certificate after some time (Vogel)
* windows: #2967 implemented: add status buttons to windows thumbnail toolbar (Vogel)

+++ version 4.0-alpha1
* amarok1_mediaplayer: plugin removed (Vogel)
* encryption_ng: plugin removed (Vogel)
* encryption_ng_simlite: plugin removed (Vogel)
* growl_notify: plugin removed (Vogel)
* history_migration: plugin removed (Vogel)
* itunes_mediaplayer: plugin removed (Vogel)
* profiles_import: plugin removed (Vogel)
* phonon_sound: plugin removed (Vogel)
* falf_mediaplayer: plugin removed (Vogel)
* hints: plugin simplified (Vogel)
* configuration: removed compatibility with 0.6.5 configuration files (Vogel)
* gadu: #3068 fixed: send gift action removed (Vogel)

+++ version 3.0
* chat-style: #3057 fixed: all chat styles work again (Vogel)
* jabber: #3064 fixed: re-enable legacy SSL connection option (Vogel)

+++ version 3.0-rc4
* icons: #3058 fixed: remove too big icons (Vogel)
* hints: #3060 fixed: crash (Vogel)

+++ version 3.0-rc3
* docking: #3050 fixed: try icon is now visible everywhere (Vogel)
* docking: #3044 fixed: proper context menu appears on tray every time (Vogel)

+++ version 3.0-rc2
* docking: #3037 fixed: loading docking plugin after import from 2.x (Vogel)

+++ version 3.0-rc1
* jabber: #3015 done: removed Facebook support (Vogel)
* autoresponder: #3016 fixed: crash on exit when autoresponder is used (Vogel)
* translations: complete Spanish (Mexican) translations (timbamik)
* freebsd: #3028 fixed: compilation issued (Paweł Pękala)
* desktop_docking: plugin removed (Vogel)
* docking: #3020 fixed: icon is now visible in Plasma5 (wojtek k)

+++ version 3.0-beta1
* contacts: #2990 fixed: mising up contacts priorities sometimes (Vogel)